# call-haskell-from-anything

./: .gitignore  CHANGELOG.md  README.md  Setup.hs  a.out  call-haskell-from-anything.cabal  configure  detect-ghc-buildinfo.py  test.py
.ccls-cache/@home@jimmy@newDisk@Repo@call-haskell-from-anything/: dist-newstyle@build@x86_64-linux@ghc-8.8.4@call-haskell-from-anything-1.1.0.1@build@autogen@cabal_macros.h  dist-newstyle@build@x86_64-linux@ghc-8.8.4@call-haskell-from-anything-1.1.0.1@build@autogen@cabal_macros.h.blob
.mypy_cache/3.8/: _ast.meta.json  _importlib_modulespec.meta.json  abc.meta.json  argparse.meta.json  array.meta.json  ast.meta.json  builtins.meta.json  codecs.meta.json  detect-ghc-buildinfo.data.json  detect-ghc-buildinfo.meta.json  io.meta.json  mmap.meta.json  posix.meta.json  struct.data.json  struct.meta.json  subprocess.meta.json  sys.meta.json  test.data.json  test.meta.json  types.meta.json  typing.meta.json
.mypy_cache/3.8/collections/: __init__.meta.json  abc.meta.json
.mypy_cache/3.8/ctypes/: __init__.meta.json
.mypy_cache/3.8/importlib/: __init__.meta.json  abc.meta.json
.mypy_cache/3.8/os/: __init__.meta.json  path.meta.json
dist-newstyle/cache/: compiler  config  elaborated-plan  improved-plan  plan.json  solver-plan  source-hashes  up-to-date
src/FFI/Anything/: TH.hs  TypeUncurry.hs
src/FFI/Anything/TypeUncurry/: DataKinds.hs  Msgpack.hs
