name:          call-haskell-from-anything
version:       1.1.0.1
license:       MIT
author:        Niklas Hambüchen (mail@nh2.me)
maintainer:    Airlk (jimmy123good@hotmail.com)
category:      Network
-- We use Configure to determine the `extra-libraries: HSrts-ghc*.*.*` field.
-- See the ./configure script.
build-type:    Simple
license:       MIT
synopsis:      Call Haskell functions from other languages via serialization and dynamic libraries
description:   FFI via serialisation. See https://github.com/airlk/call-haskell-from-anything for details.
stability:     experimental
tested-with:   GHC==8.8.4
cabal-version: >=1.10
homepage:      https://github.com/airlk/call-haskell-from-anything
bug-reports:   https://github.com/ailrk/call-haskell-from-anything/issues


extra-source-files:
  configure
  detect-ghc-buildinfo.py
  test.py
  test.rb


source-repository head
  type: git
  location: git://github.com/ailrk/call-haskell-from-anything.git


library
  default-language: Haskell2010
  hs-source-dirs:
    src
  exposed-modules:
    FFI.Anything.TH
    FFI.Anything.TypeUncurry
    FFI.Anything.TypeUncurry.Msgpack
    FFI.Anything.TypeUncurry.DataKinds
  build-depends:
      base >= 4.13 && < 5
    , bytestring
    , data-msgpack
    , storable-endian
    , template-haskell
    , mtl
  ghc-options:
    -Wall -fwarn-unused-imports


foreign-library call-haskell-from-anything.so
  type: native-shared
  lib-version-info: 1:0:0
  default-language: Haskell2010
  other-modules:    Test1
  hs-source-dirs:
      test
  build-depends:
      call-haskell-from-anything
    , base
    , bytestring
    , data-msgpack
    , mtl

  ghc-options:
    -- For building TemplateHaskell with cabal and -dynamic, we have to disable -dynamic sometimes
    -no-hs-main -fPIC -shared -dynamic
